// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute canton-data endpoint should query with filter and exercise choice on latest contract 1`] = `
{
  "data": {
    "contract": {
      "agreementText": "Asset transfer agreement",
      "contractId": "33b4c8d9e1c2b0a7f6e5d4c3b2d1e0a9f8b7c6d5e4f3a2b1c0d9e8f7a6b5c4d3",
      "createdAt": "2025-10-17T12:00:00Z",
      "observers": [
        "Bob",
      ],
      "payload": {
        "amount": "2000",
        "currency": "USD",
        "isin": "US0378331005",
        "issuer": "Alice",
        "owner": "Bob",
      },
      "signatories": [
        "Alice",
      ],
      "templateId": "example-package-id:Main:Asset",
    },
    "exerciseResult": {
      "events": [
        {
          "contractId": "00e1f5c6d8b9a7f4e3c2d1a0b9c8d7e6f5a4b3c2d1e0f9a8b7c6d5e4f3a2b1c0",
          "eventId": "event-123",
          "eventType": "ChoiceExercised",
          "templateId": "example-package-id:Main:Asset",
        },
      ],
      "exerciseResult": {
        "currency": "USD",
        "value": "1000",
      },
      "status": 200,
    },
    "result": "{"exerciseResult":{"value":"1000","currency":"USD"},"events":[{"eventId":"event-123","contractId":"00e1f5c6d8b9a7f4e3c2d1a0b9c8d7e6f5a4b3c2d1e0f9a8b7c6d5e4f3a2b1c0","templateId":"example-package-id:Main:Asset","eventType":"ChoiceExercised"}],"status":200}",
  },
  "result": "{"exerciseResult":{"value":"1000","currency":"USD"},"events":[{"eventId":"event-123","contractId":"00e1f5c6d8b9a7f4e3c2d1a0b9c8d7e6f5a4b3c2d1e0f9a8b7c6d5e4f3a2b1c0","templateId":"example-package-id:Main:Asset","eventType":"ChoiceExercised"}],"status":200}",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1760400000000,
    "providerDataRequestedUnixMs": 1760400000000,
  },
}
`;

exports[`execute canton-data endpoint should return success when exercising a choice with argument 1`] = `
{
  "data": {
    "exerciseResult": {
      "events": [
        {
          "contractId": "00e1f5c6d8b9a7f4e3c2d1a0b9c8d7e6f5a4b3c2d1e0f9a8b7c6d5e4f3a2b1c0",
          "eventId": "event-123",
          "eventType": "ChoiceExercised",
          "templateId": "example-package-id:Main:Asset",
        },
      ],
      "exerciseResult": {
        "currency": "USD",
        "value": "1000",
      },
      "status": 200,
    },
    "result": "{"exerciseResult":{"value":"1000","currency":"USD"},"events":[{"eventId":"event-123","contractId":"00e1f5c6d8b9a7f4e3c2d1a0b9c8d7e6f5a4b3c2d1e0f9a8b7c6d5e4f3a2b1c0","templateId":"example-package-id:Main:Asset","eventType":"ChoiceExercised"}],"status":200}",
  },
  "result": "{"exerciseResult":{"value":"1000","currency":"USD"},"events":[{"eventId":"event-123","contractId":"00e1f5c6d8b9a7f4e3c2d1a0b9c8d7e6f5a4b3c2d1e0f9a8b7c6d5e4f3a2b1c0","templateId":"example-package-id:Main:Asset","eventType":"ChoiceExercised"}],"status":200}",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1760400000000,
    "providerDataRequestedUnixMs": 1760400000000,
  },
}
`;

exports[`execute canton-data endpoint should return success when exercising a choice without argument 1`] = `
{
  "data": {
    "exerciseResult": {
      "events": [
        {
          "contractId": "00e1f5c6d8b9a7f4e3c2d1a0b9c8d7e6f5a4b3c2d1e0f9a8b7c6d5e4f3a2b1c0",
          "eventId": "event-123",
          "eventType": "ChoiceExercised",
          "templateId": "example-package-id:Main:Asset",
        },
      ],
      "exerciseResult": {
        "currency": "USD",
        "value": "1000",
      },
      "status": 200,
    },
    "result": "{"exerciseResult":{"value":"1000","currency":"USD"},"events":[{"eventId":"event-123","contractId":"00e1f5c6d8b9a7f4e3c2d1a0b9c8d7e6f5a4b3c2d1e0f9a8b7c6d5e4f3a2b1c0","templateId":"example-package-id:Main:Asset","eventType":"ChoiceExercised"}],"status":200}",
  },
  "result": "{"exerciseResult":{"value":"1000","currency":"USD"},"events":[{"eventId":"event-123","contractId":"00e1f5c6d8b9a7f4e3c2d1a0b9c8d7e6f5a4b3c2d1e0f9a8b7c6d5e4f3a2b1c0","templateId":"example-package-id:Main:Asset","eventType":"ChoiceExercised"}],"status":200}",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1760400000000,
    "providerDataRequestedUnixMs": 1760400000000,
  },
}
`;
